# field_repr

./: README.md  dune-project  field_repr.opam  ppx_field_repr.opam
src/: dune  field_repr.ml  field_repr.mli  ppx_field_repr.ml
test/: dune
test/blackbox-tests/: dune
test/blackbox-tests/ppx_output.t/: run.t
test/blackbox-tests/private_disallowed.t/: run.t
test/blackbox-tests/safe_mutable.t/: main.ml  run.t
test/ppx_output.t/: run.t
test/safe_mutable.t/: main.ml  run.t
test/unit/: main.ml
test/unit-tests/: dune  main.ml
