(rule
 (targets standalone.ml)
 (action
  (write-file %{targets} "let () = Ppxlib.Driver.standalone ()")))

(executable
 (name standalone)
 (modules standalone)
 (libraries ppx_field_repr))

(env
 (_
  (binaries
   (./standalone.exe as standalone))))

(cram
 (deps
  %{bin:standalone}
  (package ppx_field_repr)))
