(rule
 (targets standalone.ml)
 (action
  (write-file %{targets} "let () = Ppxlib.Driver.standalone ()")))

(executable
 (name standalone)
 (modules standalone)
 (libraries field_repr.ppx))

(env
 (_
  (binaries
   (./standalone.exe as standalone))))

(cram
 (deps
  %{bin:standalone}
  (package field_repr))
 (enabled_if
  (and
   (>= %{ocaml_version} "4.13")
   (< %{ocaml_version} "4.14"))))
